adapt to java 20